# tree-sitter-nwscript

./: .deepsource.toml  .dockerignore  .gitignore  .rustfmt.toml  CODEOWNERS  Cargo.toml  LICENSE.txt  README.md  binding.gyp  grammar.js  package.json
.github/: dependabot.yml
.github/workflows/: check.yml  merge.yml  update.yml
bindings/rust/: build.rs  lib.rs
queries/: tsg.txt
